tests/NormalTests/paczka1/fuzzy1/82371234.err
Error in line 5: CvPbfy S63 25,0
Error in line 16: A779 S879 67,5
Error in line 17: CvPbfy S112 112,9
Error in line 12: wOfyd S112 36,5
Error in line 20: A779 A779 3,0
Error in line 29: CvPbfy S112 53,61
Error in line 22: wOfyd A779 37,7
Error in line 27: o6LMba4M1J S112 46,3
Error in line 31: CvPbfy S112 74,9
